[project]
name = "audio-overlap"
version = "0.1.0"
description = "Detect the overlapping audio region between two media files."
readme = "README.md"
repository = "https://github.com/7shi/audio-overlap"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.6",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
audio-overlap = "audio_overlap.cli:main"
